# invarium

./: .gitignore  ADAPTER_GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REAL_WORLD_TESTING.md  ROADMAP.md  SECURITY.md  TECHNICAL_GUIDE.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish-pypi.yml  tests.yml
agentcheck/: __init__.py  assertions.py  baseline.py  cli.py  compare.py  config.py  discovery.py  html_report.py  report.py  scenarios.py
agentcheck/adapters/: crewai.py  http.py
assets/: README.md
examples/: __init__.py  booking_agent.py  test_fake_booking_agent.py
framework_examples/: test_langgraph_agent.py
integration_examples/: test_openai_agents_live.py
invarium/: __init__.py  assertions.py  baseline.py  cli.py  compare.py  config.py  contracts.py  discovery.py  history.py  html_report.py  pytest_plugin.py  report.py  result.py  runners.py  scenarios.py  storage.py  testing.py
invarium/adapters/: __init__.py  base.py  crewai.py  (+5 more)
real_world_examples/: README.md  crewai_research_crew.py  langgraph_search_agent.py  openai_support_agent.py  test_crewai_research_crew.py  test_langgraph_search_agent.py  test_openai_support_agent.py
regression_examples/: test_broken_booking_agent.py
scripts/: seed-issues-2.sh  seed-issues.sh  smoke_test.py
tests/: test_assertions_and_reports.py  test_cli_output.py  test_deterministic_agent.py  test_langgraph_adapter.py  test_new_features.py  test_openai_agents_adapter.py  test_python_adapter.py
(+3 files in other folders)
