[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pygent-test"
version = "0.2.1"
description = "Pytest-style behavioral regression testing for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Ashutosh Rath" }
]
dependencies = []
keywords = ["ai", "agents", "testing", "pytest", "evals", "regression"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
openai = ["openai-agents"]
langgraph = ["langgraph", "langchain-core"]
dev = ["pytest", "openai-agents", "langgraph", "langchain-core"]

[project.urls]
Homepage = "https://github.com/ashutosh-rath02/pygent-test"
Repository = "https://github.com/ashutosh-rath02/pygent-test"
Issues = "https://github.com/ashutosh-rath02/pygent-test/issues"

[project.scripts]
agentcheck = "agentcheck.cli:main"

[project.entry-points.pytest11]
agentcheck = "agentcheck.pytest_plugin"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["agentcheck*"]

[tool.pytest.ini_options]
cache_dir = ".agentcheck/pytest_cache"
